care/force-app/main/default/objects/Round_Robin__c/Round_Robin__c.object-meta.xml
<CustomObject>
    <label>Round Robin</label>
    <nameField>
        <label>Round Robin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robins</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>