care/force-app/main/default/objects/Round_Robin__c/fields/Active_RR_Members__c.field-meta.xml
<CustomField>
    <fullName>Active_RR_Members__c</fullName>
    <label>Active RR Members</label>
    <summaryFilterItems>
        <field>Round_Robin_Member__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Round_Robin_Member__c.Round_Robin__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>