care/force-app/main/default/objects/Round_Robin__c/fields/Default_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Default_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Round Robin</label>
    <type>Checkbox</type>
</CustomField>