care/force-app/main/default/objects/Round_Robin__c/fields/Default_User__c.field-meta.xml
<CustomField>
    <fullName>Default_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Round_Robins</relationshipName>
    <type>Lookup</type>
</CustomField>