care/force-app/main/default/objects/Round_Robin__c/fields/Due_in_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_in_Number_of_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Due in Number of Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>