care/force-app/main/default/objects/Round_Robin__c/fields/Email_Intro__c.field-meta.xml
<CustomField>
    <fullName>Email_Intro__c</fullName>
    <label>Email Intro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>