care/force-app/main/default/objects/Round_Robin__c/fields/Is_Primary_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Vertical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Vertical</label>
    <type>Checkbox</type>
</CustomField>