care/force-app/main/default/objects/Round_Robin__c/fields/Lowest_Active_Task_Counter__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Active_Task_Counter__c</fullName>
    <label>Lowest Active Task Counter</label>
    <summarizedField>Round_Robin_Member__c.Task_Counter__c</summarizedField>
    <summaryFilterItems>
        <field>Round_Robin_Member__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Round_Robin_Member__c.Round_Robin__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>