care/force-app/main/default/objects/Round_Robin__c/fields/Number_of_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Close__c</fullName>
    <description>Number of days since Create Date</description>
    <label>Number of Days to Close</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>