care/force-app/main/default/objects/Round_Robin__c/fields/Opportunity_Priority__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Priority__c</fullName>
    <label>Opportunity Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>