care/force-app/main/default/objects/Round_Robin__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <defaultValue>&quot;Sales Origination&quot;</defaultValue>
    <label>Opportunity Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Center Network Development</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Home Care Seeker Opportunity</fullName>
            </value>
            <value>
                <fullName>HomePay Partner</fullName>
            </value>
            <value>
                <fullName>HomePay Referral</fullName>
            </value>
            <value>
                <fullName>International WPS Opportunity</fullName>
            </value>
            <value>
                <fullName>KU Opportunity</fullName>
            </value>
            <value>
                <fullName>Marketplace ISR Opportunity</fullName>
            </value>
            <value>
                <fullName>MKP National Opportunity</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Safety Monitoring Seeker Opportunity</fullName>
            </value>
            <value>
                <fullName>Sales Origination</fullName>
            </value>
            <value>
                <fullName>Seeker</fullName>
            </value>
            <value>
                <fullName>Senior Care Welcome Call</fullName>
            </value>
            <value>
                <fullName>Transportation Seeker Opportunity</fullName>
            </value>
            <value>
                <fullName>WPS Opportunity</fullName>
            </value>
            <value>
                <fullName>WPS Opportunity (KCE Lead)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>