care/force-app/main/default/objects/Round_Robin__c/fields/Opportunity_StageName__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_StageName__c</fullName>
    <defaultValue>&quot;Prospecting&quot;</defaultValue>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-Future Opportunity</fullName>
            </value>
            <value>
                <fullName>1-Evaluation</fullName>
            </value>
            <value>
                <fullName>2-Qualify/Needs Analysis</fullName>
            </value>
            <value>
                <fullName>3-Proposal/Price Quote</fullName>
            </value>
            <value>
                <fullName>4-Negotiation/Review</fullName>
            </value>
            <value>
                <fullName>5-Acceptance of Proposal</fullName>
            </value>
            <value>
                <fullName>6-Closed-Won</fullName>
            </value>
            <value>
                <fullName>7-Launched</fullName>
            </value>
            <value>
                <fullName>8-Closed-Lost</fullName>
            </value>
            <value>
                <fullName>9-Closed Upsell Opportunity</fullName>
            </value>
            <value>
                <fullName>10-Lost/Dead</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Value Proposition</fullName>
            </value>
            <value>
                <fullName>Id. Decision Makers</fullName>
            </value>
            <value>
                <fullName>Perception Analysis</fullName>
            </value>
            <value>
                <fullName>Proposal/Price Quote</fullName>
            </value>
            <value>
                <fullName>Negotiation/Review</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Prospects</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Maintain</fullName>
            </value>
            <value>
                <fullName>Closed pending</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Referrals Sent</fullName>
            </value>
            <value>
                <fullName>Visits Scheduled</fullName>
            </value>
            <value>
                <fullName>Move/start scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>