care/force-app/main/default/objects/Round_Robin__c/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <label>Task Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>