care/force-app/main/default/objects/Round_Robin__c/fields/Total_RR_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_RR_Members__c</fullName>
    <label>Total RR Members</label>
    <summaryForeignKey>Round_Robin_Member__c.Round_Robin__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>