care/force-app/main/default/objects/Round_Robin__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_vertical</valueSetName>
    </valueSet>
</CustomField>