care/force-app/main/default/objects/Round_Robin__c/validationRules/Default_Round_Robin_required_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Round_Robin_required_fields</fullName>
    <active>true</active>
    <description>ensure default Round Robin contains all necesary fields</description>
    <errorConditionFormula>AND( 
    Default_Round_Robin__c,
    NOT ISBLANK(Vertical__c)

)</errorConditionFormula>
    <errorMessage>Keep Vertical blank for Default Round Robin</errorMessage>
</ValidationRule>