care/force-app/main/default/objects/Round_Robin__c/validationRules/Make_default_user_required_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_default_user_required_field</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Default_User__c )</errorConditionFormula>
    <errorMessage>Please fill a default user for Round Robin</errorMessage>
</ValidationRule>