care/force-app/main/default/objects/Round_Robin__c/validationRules/Require_Vertical.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Vertical</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT Default_Round_Robin__c, 
    ISBLANK(Vertical__c)
)</errorConditionFormula>
    <errorMessage>Please select Vertical</errorMessage>
</ValidationRule>