care/force-app/main/default/objects/Round_Robin__c/validationRules/Required_fields_to_Create_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_to_Create_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Create_Opportunity__c,
    OR(
        ISPICKVAL(Opportunity_Record_Type__c, &quot;&quot;),
        ISPICKVAL(Opportunity_StageName__c, &quot;&quot;),
        ISPICKVAL(Opportunity_Priority__c, &quot;&quot;),
        ISBLANK(Number_of_Days_to_Close__c)
    )
)</errorConditionFormula>
    <errorMessage>Fill Opportunity Record type, Opportunity Stage, Opportunity priority and Number of Days to Close</errorMessage>
</ValidationRule>