care/force-app/main/default/objects/Round_Robin__c/listViews/Active_Round_Robins.listView-meta.xml
<ListView>
    <fullName>Active_Round_Robins</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Active Round Robins</label>
</ListView>