care/force-app/main/default/objects/Round_Robin__c/listViews/All_Round_Robins.listView-meta.xml
<ListView>
    <fullName>All_Round_Robins</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Active_RR_Members__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Round Robins</label>
    <language>en_US</language>
</ListView>