care/force-app/main/default/objects/Round_Robin__c/listViews/Archived_Round_Robins.listView-meta.xml
<ListView>
    <fullName>Archived_Round_Robins</fullName>
    <booleanFilter>1 OR (2 AND 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Archived Round Robins</label>
</ListView>